FIX: Checkbox v-align.

--- a/resources/assets/less/components/Checkbox.less
+++ b/resources/assets/less/components/Checkbox.less
@@ -12,6 +12,8 @@
 .Checkbox {
   width: 20px;
   height: 15px;
+  margin: 0;
+  padding: 0;
   position: relative;
   display: inline-block;
   cursor: pointer;
